--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4862,6 +4862,7 @@ p > br {
 // PLAYAS SEARCH
 
 .more-info-beach{
+     margin-top: 117px!important;
       h3 {
         position: absolute;
         left: 10%;
@@ -5181,6 +5182,7 @@ p > br {
 
    
   .more-info-beach{
+    margin-top: 10px!important;
     h3 {
       position: absolute;
       left: 10%;
@@ -5213,6 +5215,7 @@ p > br {
     }
 
   .more-info-beach{
+     margin-top: 10px!important;
         h3 {
           position: absolute;
           left: 10%;
