--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -5164,7 +5164,7 @@ p > br {
         padding-left: 0!important;
       }
       .mapc{
-        margin-top: 500px;
+        //margin-top: 500px;
       }
     }
 
