--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4881,6 +4881,10 @@ p > br {
   left: 8%!important;
 }
 
+.mimgb{
+    margin-bottom: 117px;
+}
+
 
 
 .header-playas {    
@@ -5199,6 +5203,10 @@ p > br {
     position: absolute;
     top: 60px!important;
     left: 3%!important;
+  }
+
+  .mimgb{
+    margin-bottom: 10px;
   }
 
 }
