responsive tablet : menos margin top encuentra tu playa

--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -4122,6 +4122,8 @@ p > br {
     flex-direction: column-reverse !important; }
     .map-content .premap .txt-container {
       padding-left: 0 !important; }
+      .map-content .premap .txt-container p {
+        margin-top: -90px !important; }
   .search-bar-container .search-bar .type-container.longslt {
     width: 48% !important;
     min-width: 48% !important; }
