--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -5199,7 +5199,7 @@ p > br {
     margin-top: 60px!important;
     margin-bottom: 60px!important;
     
-    p{
+    .more-info p{
       margin-top: 0!important;
     }
     h3 {
