--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -5069,6 +5069,9 @@ p > br {
       .g6{       
         bottom: 266px;
         left: 38px;
+        .enlaces{
+          width: 210px!important;
+        }
       }
       .g7{       
         bottom: 242px;
@@ -5081,6 +5084,9 @@ p > br {
       .g9{       
         bottom: 163px;
         left: 118px;
+        .enlaces{
+          width: 200px!important;
+        }
       }
       .g10{       
         bottom: 148px;
@@ -5089,6 +5095,9 @@ p > br {
       .g11{       
         bottom: 100px;
         left: 200px;
+        .enlaces{
+          width: 230px!important;
+        }
       }
       .g12{       
         bottom: 52px;
@@ -5105,6 +5114,9 @@ p > br {
       .g15{       
         bottom: 120px;
         left: 440px;
+        .enlaces{
+          width: 205px!important;
+        }
       }
       .g16{       
         bottom: 83px;
