--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -4002,7 +4002,7 @@ p > br {
         .map-content .premap .mapc .mapbox .enlaces {
           background-color: #F4F4F4;
           border-radius: 4px;
-          border: solid 1px #979797;
+          border: solid 1px #F4F4F4;
           padding: 5px 20px;
           z-index: 2;
           width: 189px;
