--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4992,7 +4992,7 @@ p > br {
         .enlaces{
           background-color: #F4F4F4;
           border-radius: 4px;
-          border: solid 1px #979797;
+          border: solid 1px #F4F4F4;
           padding: 5px 20px;
           z-index: 2;
           width: 189px;
