correcion sudo , no mostrar mapa de las playas

--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4953,6 +4953,12 @@ p > br {
       padding-bottom: 100px!important;
 }
 
+
+.fr-element{
+  .mapc{
+    display: none!important;
+  }
+}
 // PLAYAS MAPA
 .map-content{  
   background-color: #F5A623;
