--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3957,6 +3957,9 @@ p > br {
 .pbup {
   padding-bottom: 100px !important; }
 
+.fr-element .mapc {
+  display: none !important; }
+
 .map-content {
   background-color: #F5A623;
   background-image: url("../svg/topradiusyellow.svg") !important;
