--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -4139,9 +4139,13 @@ p > br {
     .map-content .premap .mapc {
       margin-left: auto;
       margin-right: auto; }
+  .pbup {
+    padding-top: 70px !important; }
   .search-bar-container .search-bar .type-container.longslt {
     width: 48% !important;
     min-width: 48% !important; }
+  #select2-sltLocationPlayas-results .select2-results__option, #select2-sltcategory-results .select2-results__option, #select2-sltType-results .select2-results__option {
+    font-size: 14px !important; }
   #sltcategory .select2-results__option {
     height: 50px !important; }
   .more-info-beach {
