--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -5267,7 +5267,7 @@ p > br {
         font-size: 19px!important;
       }
 
-      .header-general .header-txt .brush {
+      .header-txt .brush {
           margin-top: -155px!important;
           margin-bottom: 120px;
       }
