--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -4175,7 +4175,7 @@ p > br {
     margin-bottom: -80px !important; }
   .header-playas .header-comment .comment {
     font-size: 19px !important; }
-  .header-playas .header-general .header-txt .brush {
+  .header-playas .header-txt .brush {
     margin-top: -155px !important;
     margin-bottom: 120px; }
   .section-txt-comarca .pbup .title {
