--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -4178,6 +4178,12 @@ p > br {
   .header-playas .header-txt .brush {
     margin-top: -155px !important;
     margin-bottom: 120px; }
+  .header-playas .select2 {
+    border-bottom: solid 1px !important;
+    border-bottom-color: #aaaaaa !important;
+    border-radius: 0; }
+  .header-playas #event-location .select2 {
+    border: none !important; }
   .section-txt-comarca .pbup .title {
     font-size: 45px !important;
     line-height: 48px !important; }
