--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -5265,6 +5265,7 @@ p > br {
       }
       .header-comment .comment{
         font-size: 19px!important;
+        width: 90%!important;
       }
 
       .header-txt .brush {
@@ -5274,7 +5275,7 @@ p > br {
 
        .select2{
         border-bottom: solid 1px!important;
-        border-bottom-color: rgb(170, 170, 170)!important;
+        border-bottom-color: #CECECE !important;
         border-radius: 0;
       }
 
